# locust_mc

./: .dockerignore  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists_old.txt  Dockerfile  Dockerfile.kass  Dockerfile.test  FindYajl.cmake  Makefile  README.md  ReceiverTransferFunctions.cc  ReceiverTransferFunctions.hh  check_egg_digitization.cc  fix_KassiopeiaExt.cmake  generate_configs.py  generate_data.cc  index.html  receiver_transfer_functions.json  test_bg_config.json  test_bg_single_config.json  test_config.json  tone_config.json  tone_single_config.json
RandomLib/src/: CMakeLists.txt  Random.cpp
Source/: CMakeLists.txt  EventDict.cxx  EventDict_rdict.pcm  LMCConfigurator.cc  LMCConfigurator.hh  LMCConstants.hh  LMCDefaultConfig.cc  LMCDestroyer.hh  LMCDigitizer.cc  LMCDigitizer.hh  LMCEggWriter.cc  LMCEggWriter.hh  LMCException.hh  LMCFactory.hh  LMCGaussianNoiseGenerator.cc  LMCGaussianNoiseGenerator.hh  LMCGenerator.cc  LMCGenerator.hh  LMCGeneratorToolbox.cc  LMCGeneratorToolbox.hh  LMCLogger.cc  LMCLogger.hh  LMCParam.cc  LMCParam.hh  LMCParser.cc  LMCParser.hh  LMCRunLengthCalculator.cc  LMCRunLengthCalculator.hh  LMCSignal.cc  LMCSignal.hh  LMCSimulationController.cc  LMCSimulationController.hh  LMCSingleAmpSim.cc  LMCVisitor.cc  LMCVisitor.hh  LocustSim.cc  README.md  TrackDict.cxx  TrackDict_rdict.pcm  generate_data.cc
Source/Applications/: CMakeLists.txt  LMCKassiopeia.cc  LocustSim.cc  check_egg_digitization.cc  generate_data.cc
Source/Core/: #LMCGenerator.cc#  LMCChannel.cc  LMCChannel.hh  LMCConfigurator.cc  LMCConfigurator.hh  LMCConst.hh  LMCDefaultConfig.cc  LMCDefaultConfig.hh  LMCEggWriter.cc  LMCEggWriter.hh  LMCEvent.cc  LMCEvent.hh  LMCException.cc  LMCException.hh  LMCFIRFileHandler.cc  LMCFIRFileHandler.hh  LMCFIRHandler.cc  LMCFIRHandler.hh  LMCFactory.hh  LMCFieldEstimator.cc  LMCFieldEstimator.hh  LMCGenerator.cc  LMCGenerator.hh  LMCGeneratorToolbox.cc  LMCGeneratorToolbox.hh  LMCGlobals.hh  LMCGlobalsDeclaration.hh  LMCGlobalsDefinition.hh  LMCHFSSReader.cc  LMCHFSSReader.hh  LMCHFSSResponseFileHandler.cc  LMCHFSSResponseFileHandler.hh  LMCLienardWiechert.cc  LMCLienardWiechert.hh  LMCMPIInterface.cc  LMCMPIInterface.hh  LMCParam.cc  LMCParser.cc  LMCParser.hh  LMCParticle.cc  (+27 more)
Source/Deprecated/: LMCAntennaSignalTransmitter.cc  LMCAntennaSignalTransmitter.hh  LMCHighPassFilterFFTGenerator.cc  LMCHighPassFilterFFTGenerator.hh  LMCLocalOscillatorGenerator.hh
Source/Distributions/: LMCBaseDistribution.cc  LMCBaseDistribution.hh  LMCDiracDistribution.cc  LMCDiracDistribution.hh  LMCDistributionInterface.cc  LMCDistributionInterface.hh  LMCExponentialDistribution.cc  LMCExponentialDistribution.hh  LMCGaussianDistribution.cc  LMCGaussianDistribution.hh  LMCKrComplexLineDistribution.cc  LMCKrComplexLineDistribution.hh  LMCLorentzianDistribution.cc  LMCLorentzianDistribution.hh  LMCRuddDistribution.cc  LMCRuddDistribution.hh  LMCUniformCircleDistribution.cc  LMCUniformCircleDistribution.hh  LMCUniformDistribution.cc  LMCUniformDistribution.hh
Source/Fields/: LMCCylindricalCavity.cc  LMCCylindricalCavity.hh  LMCField.cc  LMCField.hh  LMCHFSSFieldMap.cc  LMCHFSSFieldMap.hh  LMCModeMapCavity.cc  LMCModeMapCavity.hh  LMCModeMapCylindricalCavity.cc  LMCModeMapCylindricalCavity.hh  LMCPozarCylindricalCavity.cc  LMCPozarCylindricalCavity.hh  LMCPozarRectangularCavity.cc  LMCPozarRectangularCavity.hh  LMCPozarRectangularWaveguide.cc  LMCPozarRectangularWaveguide.hh  LMCRectangularCavity.cc  LMCRectangularCavity.hh  LMCRectangularWaveguide.cc  LMCRectangularWaveguide.hh
Source/Generators/: #LMCLowPassFilterFFTGenerator.cc#  LMCAntennaSignalGenerator.cc  LMCAntennaSignalGenerator.hh  LMCArraySignalGenerator.cc  LMCArraySignalGenerator.hh  LMCBasebandTrackGenerator.cc  LMCBasebandTrackGenerator.hh  LMCButterworthLPFGenerator.cc  LMCButterworthLPFGenerator.hh  LMCCavitySignalGenerator.cc  LMCCavitySignalGenerator.hh  LMCDecimateSignalGenerator.cc  LMCDecimateSignalGenerator.hh  LMCDigitizer.cc  LMCDigitizer.hh  LMCDipoleSignalGenerator.cc  LMCDipoleSignalGenerator.hh  LMCFakeFreeSpaceSignalGenerator.cc  LMCFakeFreeSpaceSignalGenerator.hh  LMCFakeTrackGenerator.cc  LMCFakeTrackGenerator.hh  LMCFakeTrackSignalGenerator.cc  LMCFakeTrackSignalGenerator.hh  LMCFieldParameterGenerator.cc  LMCFieldParameterGenerator.hh  LMCFreeFieldSignalGenerator.cc  LMCFreeFieldSignalGenerator.hh  LMCFreeSpaceGenerator.cc  LMCFreeSpaceGenerator.hh  LMCGaussianNoiseGenerator.cc  LMCGaussianNoiseGenerator.hh  LMCHighPassFilterFFTGenerator.cc  LMCHighPassFilterFFTGenerator.hh  LMCKassSignalGenerator.cc  LMCKassSignalGenerator.hh  LMCKassiopeiaGenerator.cc  LMCKassiopeiaGenerator.hh  LMCLocalOscillatorGenerator.cc  LMCLocalOscillatorGenerator.hh  LMCLowPassFilterFFTGenerator.cc  (+34 more)
Source/IO/: CMakeLists.txt  LMCEvent.cc  LMCEvent.hh  LMCFileWriter.cc  LMCFileWriter.hh  LMCRootGraphWriter.cc  LMCRootGraphWriter.hh  LMCRootHistoWriter.cc  LMCRootHistoWriter.hh  LMCRootTreeWriter.cc  LMCRootTreeWriter.hh  LMCRunParameters.cc  LMCRunParameters.hh  LMCTrack.cc  LMCTrack.hh
Source/Kassiopeia/: LMCConfigureKass.cc  LMCConfigureKass.hh  LMCCyclotronRadiationExtractor.cc  LMCCyclotronRadiationExtractor.hh  LMCCyclotronRadiationExtractorBuilder.cc  LMCCyclotronRadiationExtractorBuilder.hh  LMCEventHold.cc  LMCEventHold.hh  LMCEventHoldBuilder.cc  LMCEventHoldBuilder.hh  LMCFieldCalculator.cc  LMCFieldCalculator.hh  LMCFieldCalculatorBuilder.cc  LMCFieldCalculatorBuilder.hh  LMCKassLocustInterface.cc  LMCKassLocustInterface.hh  LMCLienardWiechert.cc  LMCLienardWiechert.hh  LMCParticle.cc  LMCParticle.hh  LMCParticleSlim.cc  LMCParticleSlim.hh  LMCPowerNormFieldCalculator.cc  LMCPowerNormFieldCalculator.hh  LMCRootBuilder.cc  LMCRootBuilder.hh  LMCRunKassiopeia.cc  LMCRunKassiopeia.hh  LMCRunPause.cc  LMCRunPause.hh  LMCRunPauseBuilder.cc  LMCRunPauseBuilder.hh  LMCStepHold.cc  LMCStepHoldBuilder.hh  LMCTrackHold.cc  LMCTrackHold.hh  LMCTrackHoldBuilder.cc  LMCTrackHoldBuilder.hh
Source/RxComponents/: LMCAnalyticResponseFunction.cc  LMCAnalyticResponseFunction.hh  (+46 more)
(+246 files in other folders)
